--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_url: https://business-news.github.io/data-style-guide
 repo_url: https://github.com/business-news/data-style-guide
 theme:
   name: material
-  logo: assets/logo.svg
-  favicon: assets/favicon.svg
+  logo: assets/logo.svg       # place your official BN horizontal logo here
+  favicon: assets/favicon.svg # place your official BN favicon here
   palette:
     - scheme: default
       primary: custom
@@ -25,6 +25,7 @@ theme:
     - toc.integrate
     - search.suggest
     - content.code.copy
+
 extra_css:
   - stylesheets/extra.css
 markdown_extensions:
