--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_url: https://business-news.github.io/data-style-guide
 repo_url: https://github.com/business-news/data-style-guide
 theme:
   name: material
-  logo: assets/logo.svg       # full BN horizontal logo for the header
-  favicon: assets/favicon.svg # small square version for the tab icon
+  logo: assets/logo.svg?v=2
+  favicon: assets/favicon.svg?v=2
 
   palette:
     - scheme: default
